--- a/style.css
+++ b/style.css
@@ -157,3 +157,112 @@ footer {
     height: 5vh;
     color: white;
 }
+
+.flex-all-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.my-0{
+    margin: 5px 0px;
+}
+
+.my-1{
+    margin: 5px 0px;
+}
+
+.my-2{
+    margin: 0vh 1vw -3vh 1vw;
+}
+
+.text-center{
+    text-align: center;
+}
+
+@media screen and (max-width: 1000px) {
+
+    nav {
+        flex-direction: column;
+    }
+
+    .logo {
+        justify-content: center;
+        margin: 0.5vh 0vw;
+    }
+
+    .searchbar {
+        justify-content: center;
+        margin: 0.5vh 0vw;
+    }
+
+    .searchbar input {
+        width: 50vw;
+    }
+
+    nav ul {
+        justify-content: center;
+        margin: 0.5vh 0vw;
+        height: 5vh;
+    }
+
+    nav ul li {
+        padding: 0vh 8vw;
+    }
+
+    .card {
+        display: flex;
+        flex-direction: column;
+        margin: 0vh 2vw;
+    }
+
+    .categories{
+        flex-wrap: wrap;
+        margin: 3vh 0vw;
+    }
+
+    .category-item{
+        margin: 2vh 1vw;
+    }
+
+    .category-item img {
+        border-radius: 100%;
+        width: 60px;
+        height: 75px;
+    }
+
+    .category-item img:hover {
+        width: 70px;
+        height: 85px;
+        cursor: pointer;
+    }
+
+    .cards{
+        flex-wrap: wrap;
+        margin: 3vh 0vw;
+    }
+
+    .card-item{
+        margin: 2vh 1vw;
+    }
+
+    .card-item img {
+        border-radius: 10%;
+        width: 100px;
+        height: 125px;
+    }
+
+    .card-item img:hover {
+        width: 110px;
+        height: 135px;
+        cursor: pointer;
+    }
+
+    .my-0{
+        width: 60px;
+    }
+
+    .my-1{
+        width: 110px;
+    }
+}
